@@ -1315,12 +1315,13 @@ estimate.gam <- function (G,method,optimizer,control,in.out,scale,gamma,...) {
       else G$sig2 <- -1 #gcv
   } else {G$sig2 <- scale}
 
-  if (fam.name=="quasi"||fam.name=="quasipoisson"||fam.name=="quasibinomial") {
-    ## REML/ML invalid with quasi families
-    if (method=="REML") method <- "P-REML"
-    if (method=="ML") method <- "P-ML"
-    if (method=="P-ML"||method=="P-REML") warning("RE/ML is not recommended for quasi families")
-  }
+## Following removed since extended quasi-likelihood coded up...
+#  if (fam.name=="quasi"||fam.name=="quasipoisson"||fam.name=="quasibinomial") {
+#    ## REML/ML invalid with quasi families
+#    if (method=="REML") method <- "P-REML"
+#    if (method=="ML") method <- "P-ML"
+#    if (method=="P-ML"||method=="P-REML") warning("RE/ML is not recommended for quasi families")
+#  }
 
   if (reml) { ## then RE(ML) selection, but which variant?
    criterion <- method
